removed parts of analysis

--- a/tex_files/chapter-appendix.tex
+++ b/tex_files/chapter-appendix.tex
@@ -27,8 +27,8 @@ The density is given by
 with $\lambda$ representing the expected value of $X$.  \\
 The first two moments of the distribution are given by
 \begin{align}
-    \mathbb{E}\left[X\right] &= \lambda \\
-    \hbox{Var}\left[X\right] &= \lambda.
+    \mathbb{E}\left[X\right] &= \lambda \label{eq:poisson_exp}\\
+    \hbox{Var}\left[X\right] &= \lambda \label{eq:poisson_var}.
 \end{align}
 For $\lambda\geq10$ the distribution becomes approximately symmetrical and can thus be approximated by a normal distribution \autocite[][243]{fahrmeir2016statistik}.
 \subsection{The Negative Binomial Distribution}
