--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -910,3 +910,29 @@ outbreak in Germany},
   year={2002},
   publisher={Taylor \& Francis}
 }
+
+@article{cascella2021features,
+  title={Features, evaluation, and treatment of coronavirus (COVID-19)},
+  author={Cascella, Marco and Rajnik, Michael and Cuomo, Arturo and Dulebohn, Scott C and Di Napoli, Raffaela},
+  journal={Statpearls [internet]},
+  year={2021},
+  publisher={StatPearls Publishing}
+}
+
+@book{teutsch2000principles,
+  title={Principles and practice of public health surveillance},
+  author={Teutsch, Steven M and Churchill, R Elliott and others},
+  year={2000},
+  publisher={Oxford University Press, USA}
+}
+
+@article{snow1857cholera,
+  title={Cholera, and the water supply in the south districts of London},
+  author={Snow, John},
+  journal={British Medical Journal},
+  volume={1},
+  number={42},
+  pages={864},
+  year={1857},
+  publisher={BMJ Publishing Group}
+}
