--- a/tex_files/chapter-appendix.tex
+++ b/tex_files/chapter-appendix.tex
@@ -98,7 +98,7 @@ For large values of $r$, the negative binomial distribution can be approximated 
     \label{fitPoissonNorway}
 \end{figure}
 \clearpage
-\section{Prior Sensitivity for Germany}
+\section{Choice of Hyperpriors for Germany}
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth]{comparison_1_germany.png}
@@ -122,6 +122,90 @@ For large values of $r$, the negative binomial distribution can be approximated 
 %     \includesvg[width = \textwidth]{comparison_2_germany.svg}
 %     \caption{Value of the CPO and MAE when changing the value for $\sigma_0$. The black line highlights the values for $\sigma_0$ = 1.}
 %     \label{comparison_germany_2}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{hyper_comp_germany_1.png}
+    \caption{Value of the precision and $\phi$ when changing the value for $\sigma_0$. The black line highlights the values for $\sigma_0$ = 1.}
+    \label{comparison_germany_3}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{hyper_comp_germany_1.svg}
+%     \caption{Value of the precision and $\phi$ when changing the value for $\sigma_0$. The black line highlights the values for $\sigma_0$ = 1.}
+%     \label{comparison_germany_3}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{hyper_comp_germany_2.png}
+    \caption{Value of the precision and $\phi$ when changing the value for $\sigma_0$. The black line highlights the values for $\sigma_0$ = 1.}
+    \label{comparison_germany_4}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{hyper_comp_germany_2.svg}
+%     \caption{Value of the precision and $\phi$ when changing the value for $\sigma_0$. The black line highlights the values for $\sigma_0$ = 1.}
+%     \label{comparison_germany_4}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{intervals_prior_germany.png}
+    \caption{Comparison of the credibility intervals of a BYM2 model for different values of $\sigma_0$}
+    \label{comparison_germany_5}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{intervals_prior_germany.svg}
+%    \caption{Comparison of the credibility intervals of a BYM2 model for different values of $\sigma_0$}
+%     \label{comparison_germany_5}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{spatial_field_germany_1.png}
+    \caption{Spatial field for a Besag model and a Leroux model.}
+    \label{comparison_germany_6}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{spatial_field_germany_1.svg}
+%    \caption{Spatial field for a Besag model and a Leroux model.}
+%     \label{comparison_germany_6}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{spatial_field_germany_2.png}
+    \caption{Spatial fields for a BYM2 model.}
+    \label{comparison_germany_7}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{spatial_field_germany_2.svg}
+%    \caption{Spatial fields for a BYM2 model.}
+%     \label{comparison_germany_7}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{spatial_field_germany_3.png}
+    \caption{Spatial fields for the structured component of a BYM2 model when changing the value for $\sigma_0$.}
+    \label{comparison_germany_8}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{spatial_field_germany_3.svg}
+%    \caption{Spatial fields for the structured component of a BYM2 model when changing the value for $\sigma_0$.}
+%     \label{comparison_germany_8}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{spatial_field_germany_4.png}
+    \caption{Structured component of the spatial field for a BYM2 model.}
+    \label{comparison_germany_9}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = \textwidth]{spatial_field_germany_4.svg}
+%    \caption{Structured component of the spatial field for a BYM2 model.}
+%     \label{comparison_germany_9}
 % \end{figure}
 \section{Code Examples}
 \subsection{Specifying the Different Types of Models}
