--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -936,3 +936,14 @@ outbreak in Germany},
   year={1857},
   publisher={BMJ Publishing Group}
 }
+
+@article{gelman2014understanding,
+  title={Understanding predictive information criteria for Bayesian models},
+  author={Gelman, Andrew and Hwang, Jessica and Vehtari, Aki},
+  journal={Statistics and computing},
+  volume={24},
+  number={6},
+  pages={997--1016},
+  year={2014},
+  publisher={Springer}
+}
